package ar.unlp.agroecologia.modelo;

public enum EstadoPago {
    PENDIENTE,
    APROBADO,
    RECHAZADO
}
