package ar.unlp.agroecologia.modelo;

public enum EstadoTrabajo {
    BORRADOR,
    ENVIADO,
    EN_EVALUACION,
    APROBADO,
    APROBADO_CON_CORRECCIONES,
    RECHAZADO,
    NOTIFICADO
}
