package ar.unlp.agroecologia.modelo;

public enum RecomendacionEvaluacion {
    APROBADO,
    APROBADO_CON_CORRECCIONES,
    RECHAZADO
}
