package ar.unlp.agroecologia.modelo;

public enum TipoTrabajo {
    TRABAJO_CIENTIFICO,
    RELATO_DE_EXPERIENCIA,
    PROPUESTA_TALLER
}
